[gd_scene load_steps=4 format=3 uid="uid://dkour2dh7ebam"]

[ext_resource type="SpriteFrames" uid="uid://b1g4at5qsffyg" path="res://Code/Entities/goblin_red.tres" id="1_q167s"]
[ext_resource type="Script" path="res://Code/Entities/goblin_change_anim_color.gd" id="3_0woy6"]
[ext_resource type="Script" path="res://Code/Entities/goblin.gd" id="3_1blij"]

[node name="Goblin" type="AnimatedSprite2D"]
modulate = Color(0.698039, 0.698039, 0.698039, 1)
texture_filter = 1
sprite_frames = ExtResource("1_q167s")
script = ExtResource("3_1blij")

[node name="ChangeAnimColor" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("3_0woy6")
node = NodePath("..")

[node name="HopBuffer" type="Timer" parent="."]

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="timeout" from="HopBuffer" to="." method="_on_hop_buffer_timeout"]
